--- a/src/style/main-style.scss
+++ b/src/style/main-style.scss
@@ -4,7 +4,7 @@
   box-sizing: border-box;
 }
 
-html, body {
+body {
   font-family: Arial, Helvetica, sans-serif;
   display: flex;
   flex-direction: column;
@@ -12,4 +12,5 @@ html, body {
   height: 100vh;
   width: 100vw;
   overflow: hidden;
+  background-image: linear-gradient(to right top, #b15bbe, #9f4fb6, #8c43af, #7938a7, #642ea0, #542893, #442387, #351d7a, #2b1965, #211551, #19103e, #13082b);
 }
