--- a/src/style/grid-style.scss
+++ b/src/style/grid-style.scss
@@ -1,8 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Raleway&display=swap');
 
 $borderColor: 10px #000000c0 solid;
 
 .game {
+  margin: 40px;
   display: grid;
   grid-template-columns:  repeat(3, 150px);
   grid-template-rows:     repeat(3, 150px);
@@ -13,7 +13,6 @@ $borderColor: 10px #000000c0 solid;
     align-items: center;
     font-size: 100px;
     user-select: none;
-    font-family: Raleway, sans-serif;
     &:hover {
       cursor: context-menu;
     }
