--- a/src/style/main-style.scss
+++ b/src/style/main-style.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Raleway&display=swap');
+
 * {
   margin: 0;
   padding: 0;
@@ -5,7 +7,7 @@
 }
 
 body {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Raleway, sans-serif;
   display: flex;
   flex-direction: column;
   align-items: center;
