--- a/src/style/score-style.scss
+++ b/src/style/score-style.scss
@@ -1,9 +1,21 @@
 .score {
+  position: absolute;
   display: flex;
+  flex-direction: column;
   justify-content: space-between;
   width: 15%;
   margin-top: 50px;
   margin-bottom: 25px;
   margin-right: 15%;
+  left: 50px;
+  font-size: 30px;
+  background-color: #ffffff33;
+  border-radius: 25px;
+  padding: 15px 35px;
+  padding-left: 5px;
+  text-align: center;
+}
 
+.js-score {
+  font-family: Arial, Helvetica, sans-serif;
 }
