--- a/old/src/style/score-style.scss
+++ b/old/src/style/score-style.scss
@@ -11,8 +11,7 @@
   font-size: 30px;
   background-color: #ffffff33;
   border-radius: 25px;
-  padding: 15px 35px;
-  padding-left: 5px;
+  padding: 15px 35px 15px 5px;
   text-align: center;
 }
 
